[package]
name = "rec"
version = "0.1.0"
edition = "2024"
description = "Quick speech-to-text for devs"

[[bin]]
name = "rec"
path = "src/main.rs"

[dependencies]
arboard = "3.6.1"
clap = { version = "4", features = ["derive"] }
cpal = "0.16.0"
hound = "3.5.1"
reqwest = { version = "0.12.26", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
